; ModuleID = '/home/carl/AnghaBench/linux/lib/extr_genalloc.c_gen_pool_first_fit.c'
source_filename = "/home/carl/AnghaBench/linux/lib/extr_genalloc.c_gen_pool_first_fit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gen_pool = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @gen_pool_first_fit(i64* %0, i64 %1, i64 %2, i32 %3, i8* %4, %struct.gen_pool* %5, i64 %6) #0 {
  %8 = alloca i64*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca %struct.gen_pool*, align 8
  %14 = alloca i64, align 8
  store i64* %0, i64** %8, align 8
  store i64 %1, i64* %9, align 8
  store i64 %2, i64* %10, align 8
  store i32 %3, i32* %11, align 4
  store i8* %4, i8** %12, align 8
  store %struct.gen_pool* %5, %struct.gen_pool** %13, align 8
  store i64 %6, i64* %14, align 8
  %15 = load i64*, i64** %8, align 8
  %16 = load i64, i64* %9, align 8
  %17 = load i64, i64* %10, align 8
  %18 = load i32, i32* %11, align 4
  %19 = call i64 @bitmap_find_next_zero_area(i64* %15, i64 %16, i64 %17, i32 %18, i32 0)
  ret i64 %19
}

declare dso_local i64 @bitmap_find_next_zero_area(i64*, i64, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
